--- a/assets/style.css
+++ b/assets/style.css
@@ -20,32 +20,7 @@ h1,h2,h3,h4,h5,h6{
     border-bottom: 2px solid #cccccc;
     
 }
-@media only screen and (min-width: 768px) {
 
-    .header-h2{
-        background-color: #4aaaa5;
-        color: #ffffff;
-        font-size: 1.5em;
-        width: 50%;
-        height: 100%;
-        text-align: center;
-        padding: 10px 10px 0 10px;
-        font-weight: bold;
-    }
-}
-@media only screen and (max-width: 768px) {
-
-    .header-h2{
-        background-color: #4aaaa5;
-        color: #ffffff;
-        font-size: 1.5em;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        padding: 10px 10px 0 10px;
-        font-weight: bold;
-    }
-}
 /*.header-right{
     width: 33%;
     float: right;
@@ -117,6 +92,9 @@ h1,h2,h3,h4,h5,h6{
     position: relative;
     text-align: left;
 }*/
+.portfolio-column{
+    margin-bottom: 20px;
+}
 .portfolio-column div{
     position: absolute;
     bottom: 4px;
@@ -140,4 +118,53 @@ h1,h2,h3,h4,h5,h6{
     padding: 10px 0 5px 0 ;
     margin-left: auto;
     margin-right: auto;
+
 }
+.header-h2{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-size: 1.5em;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    padding: 10px 10px 0 10px;
+    font-weight: bold;
+}
+@media only screen and (max-width: 980px) {
+    
+    .portfolio-column div{
+        right:226px;
+    }
+    .portfolio-column{
+        text-align: center;
+    }
+}
+@media only screen and (max-width: 768px) {
+
+    .header-h2{
+        background-color: #4aaaa5;
+        color: #ffffff;
+        font-size: 1.5em;
+        width: 50%;
+        height: 100%;
+        text-align: center;
+        padding: 10px 10px 0 10px;
+        font-weight: bold;
+    }
+    .portfolio-column{
+        text-align: center;
+    }
+    .portfolio-column div{
+        right:155px;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .portfolio-column{
+        text-align: center;
+    }
+    .portfolio-column div{
+        right:218px;
+    }
+
+}   
