--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0px;
     padding: 0px; 
 }
-p,a{
+p,a,li{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif !important;
 }
@@ -124,7 +124,7 @@ h1,h2,h3,h4,h5,h6{
     background-color: #4aaaa5;
     color: #ffffff;
     font-size: 1.5em;
-    width: 50%;
+    width: 100%;
     height: 100%;
     text-align: center;
     padding: 10px 10px 0 10px;
@@ -168,3 +168,14 @@ h1,h2,h3,h4,h5,h6{
     }
 
 }   
+.cutomButtonPortfolio{
+    border: 1px solid navy;
+    padding: 7px 17px;
+    border-radius: 5px;
+    color:navy;
+}
+.cutomButtonPortfolio:hover{
+    background-color: navy;
+    color:white;
+    text-decoration: none;
+}
