--- a/assets/style.css
+++ b/assets/style.css
@@ -182,3 +182,9 @@ h1,h2,h3,h4,h5,h6{
 .portfolio-boxes{
     margin-top:50px;
 }
+@media only screen and (max-width:1372px){
+    .cutomButtonPortfolio{
+        border:none;
+        text-decoration: underline;
+    }
+}
